# webdriver-demo

./: debug_demo.py  duckgo.py  exceptions_intro.py  givenpage.py  pyproject.toml  selenipupser.py  test_duckduckgo_selene.py  test_duckduckgo_selenipupser.py  test_duckduckgo_selenium.py  test_selenipupers__element_should_have_text.py  test_selenipupers__type.py  test_selenipupers__type_failure.py  test_the_internet_add_remove_elements_selenipupser.py  wait.py
prepared/: test_selenipupers__element_should_have_text.py
