[tool.poetry]
name = "webdriver-demo"
version = "0.1.0"
description = "demo of selenium webdriver with comparison to selene and customly built mini-wrapper"
authors = ["yashaka <yashaka@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.0"
pytest = "^6.2.5"
webdriver-manager = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
